extract abstract database

--- a/locales/ml/LC_MESSAGES/iso3166.po
+++ b/locales/ml/LC_MESSAGES/iso3166.po
@@ -8,7 +8,7 @@
 #    documentation is worth reading, especially sections dedicated to
 #    this format, e.g. by running:
 #         info -n '(gettext)PO Files'
-#         info -n '(gettext)Header Entry'
+#         info -n '(gettext)Header AbstractDatabaseEntry'
 #
 #
 msgid ""
