--- a/messages/is/LC_MESSAGES/4217.po
+++ b/messages/is/LC_MESSAGES/4217.po
@@ -1,24 +1,25 @@
-# translation of iso_4217-3.60.is.po to Icelandic
+# translation of iso_4217-3.76.is.po to Icelandic
 # Translation of ISO 4217 (currency names) to Icelandic
 #
 # This file is distributed under the same license as the iso-codes package.
 #
 # Copyright © Free Software Foundation
 #
-# Sveinn í Felli <sveinki@nett.is>, 2010, 2011, 2015.
+# Sveinn í Felli <sveinki@nett.is>, 2010, 2011, 2015, 2017.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_4217\n"
 "Report-Msgid-Bugs-To: Debian iso-codes team <pkg-isocodes-devel@lists.alioth."
 "debian.org>\n"
 "POT-Creation-Date: 2017-04-25 17:24+0200\n"
-"PO-Revision-Date: 2015-08-22 16:01+0000\n"
+"PO-Revision-Date: 2017-11-02 09:26+0000\n"
 "Last-Translator: Sveinn í Felli <sv1@fellsnet.is>\n"
 "Language-Team: Icelandic <translation-team-is@lists.sourceforge.net>\n"
 "Language: is\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Bugs: Report translation errors to the Language-Team address.\n"
 "X-Generator: Lokalize 1.5\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
@@ -39,8 +40,6 @@ msgid "Armenian Dram"
 msgstr "Armenskt dram"
 
 #. Name for ANG
-#, fuzzy
-#| msgid "Netherlands Antillian Guilder"
 msgid "Netherlands Antillean Guilder"
 msgstr "Hollenskt Antillu-gyllini"
 
@@ -57,18 +56,14 @@ msgid "Australian Dollar"
 msgstr "Ástralskur dollari"
 
 #. Name for AWG
-#, fuzzy
-#| msgid "Aruban Guilder"
 msgid "Aruban Florin"
-msgstr "Arúbínskt gyllini"
+msgstr "Arúbínskt florin"
 
 #. Name for AZN
 msgid "Azerbaijanian Manat"
 msgstr "Aserbaídsjanskt manat"
 
 #. Name for BAM
-#, fuzzy
-#| msgid "Convertible Marks"
 msgid "Convertible Mark"
 msgstr "Umbreytanleg mörk"
 
@@ -121,8 +116,6 @@ msgid "Pula"
 msgstr "Pula"
 
 #. Name for BYN
-#, fuzzy
-#| msgid "Belarussian Ruble"
 msgid "Belarusian Ruble"
 msgstr "Hvítrússnesk rúbla"
 
@@ -159,18 +152,14 @@ msgid "Costa Rican Colon"
 msgstr "Kostaríkanskur kólon"
 
 #. Name for CUC
-#, fuzzy
-#| msgid "Convertible Marks"
 msgid "Peso Convertible"
-msgstr "Umbreytanleg mörk"
+msgstr "Umbreytanlegur pesó"
 
 #. Name for CUP
 msgid "Cuban Peso"
 msgstr "Kúbanskur pesó"
 
 #. Name for CVE
-#, fuzzy
-#| msgid "Cape Verde Escudo"
 msgid "Cabo Verde Escudo"
 msgstr "Grænhöfðaeyskur eskúdó"
 
@@ -260,7 +249,7 @@ msgstr "Lempira"
 
 #. Name for HRK
 msgid "Kuna"
-msgstr ""
+msgstr "Kuna"
 
 #. Name for HTG
 msgid "Gourde"
@@ -407,10 +396,8 @@ msgid "Rufiyaa"
 msgstr "Rufiyaa"
 
 #. Name for MWK
-#, fuzzy
-#| msgid "Zambian Kwacha"
 msgid "Malawi Kwacha"
-msgstr "Sambískt kwacha"
+msgstr "Malavískt kwacha"
 
 #. Name for MXN
 msgid "Mexican Peso"
@@ -422,7 +409,7 @@ msgstr "Malasísk ringgit"
 
 #. Name for MZN
 msgid "Mozambique Metical"
-msgstr ""
+msgstr "Mósambískt metikal"
 
 #. Name for NAD
 msgid "Namibia Dollar"
@@ -457,10 +444,8 @@ msgid "Balboa"
 msgstr "Balboa"
 
 #. Name for PEN
-#, fuzzy
-#| msgid "Som"
 msgid "Sol"
-msgstr "Som"
+msgstr "Sol"
 
 #. Name for PGK
 msgid "Kina"
@@ -488,7 +473,7 @@ msgstr "Katarskur ríal"
 
 #. Name for RON
 msgid "Romanian Leu"
-msgstr ""
+msgstr "Rúmenskt leu"
 
 #. Name for RSD
 msgid "Serbian Dinar"
@@ -543,10 +528,8 @@ msgid "Surinam Dollar"
 msgstr "Súrínamdollari"
 
 #. Name for SSP
-#, fuzzy
-#| msgid "Sudanese Pound"
 msgid "South Sudanese Pound"
-msgstr "Súdanskt pund"
+msgstr "Suður-súdanskt pund"
 
 #. Name for STD
 msgid "Dobra"
@@ -574,23 +557,19 @@ msgstr "Somoni"
 
 #. Name for TMT
 msgid "Turkmenistan New Manat"
-msgstr ""
+msgstr "Túrkmenískt Nýtt-Manat"
 
 #. Name for TND
 msgid "Tunisian Dinar"
 msgstr "Túnískur dínar"
 
 #. Name for TOP
-#, fuzzy
-#| msgid "Pa'anga"
 msgid "Pa’anga"
-msgstr "Pa'anga"
+msgstr "Pa’anga"
 
 #. Name for TRY
-#, fuzzy
-#| msgid "New Turkish Lira"
 msgid "Turkish Lira"
-msgstr "Ný tyrknesk líra"
+msgstr "Tyrknesk líra"
 
 #. Name for TTD
 msgid "Trinidad and Tobago Dollar"
@@ -626,7 +605,7 @@ msgstr "Úsbekistanskt sum"
 
 #. Name for VEF
 msgid "Bolívar"
-msgstr ""
+msgstr "Bólívar"
 
 #. Name for VND
 msgid "Dong"
@@ -653,38 +632,28 @@ msgid "Gold"
 msgstr "Gull"
 
 #. Name for XBA
-#, fuzzy
-#| msgid "European Composite Unit (EURCO)"
 msgid "Bond Markets Unit European Composite Unit (EURCO)"
-msgstr "Evrópsk samsett eining (EURCO)"
+msgstr "Evrópsk samsett eining skuldabréfamarkaða (EURCO)"
 
 #. Name for XBB
-#, fuzzy
-#| msgid "European Monetary Unit (E.M.U.-6)"
 msgid "Bond Markets Unit European Monetary Unit (E.M.U.-6)"
-msgstr "Evrópsk mynteining (E.M.U.-6)"
+msgstr "Evrópsk mynteining skuldabréfamarkaða (E.M.U.-6)"
 
 #. Name for XBC
-#, fuzzy
-#| msgid "European Unit of Account 9 (E.U.A.-9)"
 msgid "Bond Markets Unit European Unit of Account 9 (E.U.A.-9)"
-msgstr "Evrópsk eining fyrir reikning 9 (E.U.A.-9)"
+msgstr "Evrópsk eining skuldabréfamarkaða fyrir reikning 9 (E.U.A.-9)"
 
 #. Name for XBD
-#, fuzzy
-#| msgid "European Unit of Account 17 (E.U.A.-17)"
 msgid "Bond Markets Unit European Unit of Account 17 (E.U.A.-17)"
-msgstr "Evrópsk eining fyrir reikning 17 (E.U.A.-17)"
+msgstr "Evrópsk eining skuldabréfamarkaða fyrir reikning 17 (E.U.A.-17)"
 
 #. Name for XCD
 msgid "East Caribbean Dollar"
 msgstr "Austur-karíbahafsdollari"
 
 #. Name for XDR
-#, fuzzy
-#| msgid "Special Drawing Rights"
 msgid "SDR (Special Drawing Right)"
-msgstr "Sérstök yfirdráttarréttindi"
+msgstr "SDR (sérstök yfirdráttarréttindi)"
 
 #. Name for XOF
 msgid "CFA Franc BCEAO"
@@ -704,21 +673,20 @@ msgstr "Platína"
 
 #. Name for XSU
 msgid "Sucre"
-msgstr ""
+msgstr "Sucre"
 
 #. Name for XTS
-#, fuzzy
-#| msgid "Code for testing purposes"
 msgid "Codes specifically reserved for testing purposes"
-msgstr "Kóði til prófunar"
+msgstr "Kóðar sérstaklega fráteknir til prófunar"
 
 #. Name for XUA
 msgid "ADB Unit of Account"
-msgstr ""
+msgstr "ADB eining fyrir reikning"
 
 #. Name for XXX
 msgid "The codes assigned for transactions where no currency is involved"
 msgstr ""
+"Kóðar sem úthlutað er á færslur þar sem enginn gjaldmiðill kemur við sögu"
 
 #. Name for YER
 msgid "Yemeni Rial"
